# TheLordOfTheFakeRing

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/MH-FMD_driver/: MH-FMD_driver.c
components/ST7735S_driver/: st7735s_graphics.c  st7735s_hal.c
components/ST7735S_driver/include/: st7735s_graphics.h  st7735s_hal.h
components/assets/: CMakeLists.txt  fonts.c  maps.c  musics.c  sprites.c
components/assets/include/: fonts.h  maps.h  musics.h  sprites.h
components/game_engine/: CMakeLists.txt  game_engine_blocks.c  game_engine_char.c  game_engine_display.c  game_engine_platforms.c  game_engine_utils.c
components/game_engine/include/: game_engine.h
components/gamepad/: gamepad.c
components/gamepad/include/: gamepad.h
components/gamepad_driver/: gamepad.c
components/gamepad_driver/include/: gamepad.h
components/graphics/: CMakeLists.txt  graphics.c
components/graphics/include/: graphics.h
components/joystick/: CMakeLists.txt  joystick.c
components/joystick/include/: joystick.h
components/project_config/: CMakeLists.txt
components/project_config/include/: project_config.h
components/st7735s/: CMakeLists.txt  st7735s.c  st7735s_graphics.c  st7735s_hal.c
components/st7735s/include/: st7735s.h  st7735s_fonts.h  st7735s_graphics.h  st7735s_hal.h
console_firmware/: CMakeLists.txt  sdkconfig
console_firmware/components/game_engine/: CMakeLists.txt  game_engine_blocks.c  game_engine_char.c  game_engine_display.c  game_engine_platforms.c  game_engine_utils.c
console_firmware/components/game_engine/include/: game_engine.h
console_firmware/main/: CMakeLists.txt  console_firmware.c  utils.c
console_firmware/main/include/: utils.h
controller_firmware/: CMakeLists.txt  sdkconfig
controller_firmware/main/: CMakeLists.txt  controller_firmware.c
main/: CMakeLists.txt  TheLordOfTheFakeRing.c  controller.c  controller.h  game_engine.c  interface.c
main/include/: game_engine.h  interface.h
(+25 files in other folders)
